test/parser/error/err_15_assign_to_proc.pl0
program p; 
procedure f(); 
begin 
end; 

begin 
    f := 1 
end